--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "start:dev": "REACT_APP_ENV=dev npm run start",
+    "start:prod": "REACT_APP_ENV=prod npm run start",
+    "build:dev": "REACT_APP_ENV=dev npm run build",
+    "build:prod": "REACT_APP_ENV=prod npm run build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint --cache --fix 'src/**/*.{js,jsx,ts,tsx}'",
